[package]
name = "lambdrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lambda_http = "0.11.4"
lambda_runtime = "0.11.3"
async-trait = { version = "0.1.80", features = [] }
